@@ -9,47 +9,59 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class LugarService implements iLugarService {
-    private final LugarRepository LugarRepository;
-    private final ModelMapper ModelMapper;
 
+    private final LugarRepository lugarRepository;
+    private final ModelMapper modelMapper;
 
-    public LugarService(com.example.spazio.repository.LugarRepository lugarRepository, org.modelmapper.ModelMapper modelMapper) {
-        LugarRepository = lugarRepository;
-        ModelMapper = modelMapper;
+    public LugarService(LugarRepository lugarRepository, ModelMapper modelMapper) {
+        this.lugarRepository = lugarRepository;
+        this.modelMapper = modelMapper;
+        configureMapping();
     }
 
-    public LugarSalidaDTO agregarLugar(LugarEntradaDTO Lugar){
-        Lugar lugarEntidad = ModelMapper.map(Lugar, Lugar.class);
-
-        Lugar lugarAPersistir = LugarRepository.save(lugarEntidad);
-        LugarSalidaDTO lugarSalidaDTO = ModelMapper.map(lugarAPersistir, LugarSalidaDTO.class);
+    @Override
+    public LugarSalidaDTO agregarLugar(LugarEntradaDTO lugarDto) {
+        Lugar lugar = modelMapper.map(lugarDto, Lugar.class);
+        Lugar lugarPersistido = lugarRepository.save(lugar);
+        LugarSalidaDTO lugarSalidaDTO = modelMapper.map(lugarPersistido, LugarSalidaDTO.class);
         return lugarSalidaDTO;
     }
 
-    public List<LugarSalidaDTO> listarLugares(){
-        List<LugarSalidaDTO> lugarSalidaDTOList = LugarRepository.findAll()
-                .stream()
-                .map(lugar -> ModelMapper.map(lugar, LugarSalidaDTO.class))
-                .toList();
-        return lugarSalidaDTOList;
+    @Override
+    public List<LugarSalidaDTO> listarLugares() {
+        return lugarRepository.findAll().stream()
+                .map(lugar -> modelMapper.map(lugar, LugarSalidaDTO.class))
+                .collect(Collectors.toList());
     }
 
-    public LugarSalidaDTO buscarLugarPorId(Long id){
-        Lugar lugarBuscado = LugarRepository.findById(id).orElse(null);
-        LugarSalidaDTO lugarEncontrado = null;
-
-        if(lugarBuscado != null){
-            lugarEncontrado = ModelMapper.map(lugarBuscado, LugarSalidaDTO.class);
-        }
-        return lugarEncontrado;
+    @Override
+    public LugarSalidaDTO buscarLugarPorId(Long id) {
+        Lugar lugarBuscado = lugarRepository.findById(id).orElse(null);
+        return lugarBuscado != null ? modelMapper.map(lugarBuscado, LugarSalidaDTO.class) : null;
     }
 
-    public void eliminarLugar(Long id){
-        if(LugarRepository.findById(id).orElse(null) != null){
-            LugarRepository.deleteById(id);
-        }
+    @Override
+    public void eliminarLugar(Long id) {
+        lugarRepository.findById(id).ifPresent(lugarRepository::delete);
     }
+
+    private void configureMapping() {
+        // Mapeo de LugarEntradaDTO a Lugar
+        modelMapper.typeMap(LugarEntradaDTO.class, Lugar.class)
+                .addMapping(LugarEntradaDTO::getFotos, Lugar::setFotos);
+
+        // Mapeo de Lugar a LugarSalidaDTO
+        modelMapper.typeMap(Lugar.class, LugarSalidaDTO.class)
+                .addMapping(src -> src.getId(), LugarSalidaDTO::setId) // Mapeo del ID del lugar
+                .addMapping(Lugar::getFotos, LugarSalidaDTO::setFotos);
+
+
+
+    }
+
+
 }
